// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The NavLinkBuilder with a collapsable header should add a one item in a collapsable section two inside that one 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "links": Array [
          Object {
            "name": "abc",
          },
          Object {
            "name": "def",
          },
        ],
        "name": "xyz",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should add a single item to the heading 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "xyz",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should add a two items on the same level 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "xyz",
      },
      Object {
        "name": "abc",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should nest correctly for headings with a jump 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h4",
      },
    ],
    "name": "h3",
  },
  Object {
    "links": Array [
      Object {
        "name": "h2",
      },
    ],
    "name": "h1",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should nest correctly for wrong order nestings 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h4",
      },
      Object {
        "name": "h3",
      },
      Object {
        "name": "h2",
      },
      Object {
        "name": "h1",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should nest correctly without h1 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "links": Array [
          Object {
            "name": "h3",
          },
        ],
        "name": "h2",
      },
      Object {
        "links": Array [
          Object {
            "name": "another h3",
          },
        ],
        "name": "another h2",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should not nest two h2 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "links": Array [
          Object {
            "name": "h2",
          },
          Object {
            "links": Array [
              Object {
                "name": "h3",
              },
            ],
            "name": "h2",
          },
        ],
        "name": "h1",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder with a collapsable header should not nest two h3 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h1",
      },
      Object {
        "links": Array [
          Object {
            "name": "h2",
          },
          Object {
            "links": Array [
              Object {
                "name": "h3",
              },
              Object {
                "links": Array [
                  Object {
                    "name": "h4",
                  },
                ],
                "name": "h3",
              },
            ],
            "name": "h2",
          },
        ],
        "name": "h1",
      },
    ],
    "name": "head",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should add a four items on different levels 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "links": Array [
          Object {
            "links": Array [
              Object {
                "name": "geh",
              },
            ],
            "name": "def",
          },
        ],
        "name": "abc",
      },
    ],
    "name": "xyz",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should add a single item to an empty list 1`] = `
Array [
  Object {
    "name": "xyz",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should add a two items on different levels 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "abc",
      },
    ],
    "name": "xyz",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should add a two items on the same level 1`] = `
Array [
  Object {
    "name": "xyz",
  },
  Object {
    "name": "abc",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should add a two items on the same level and two items on different levels 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "xyz.1",
      },
    ],
    "name": "xyz",
  },
  Object {
    "links": Array [
      Object {
        "name": "abc.1",
      },
    ],
    "name": "abc",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should nest correctly for headings with a jump 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h4",
      },
    ],
    "name": "h3",
  },
  Object {
    "links": Array [
      Object {
        "name": "h2",
      },
    ],
    "name": "h1",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should nest correctly for wrong order headings 1`] = `
Array [
  Object {
    "name": "h4",
  },
  Object {
    "name": "h3",
  },
  Object {
    "name": "h2",
  },
  Object {
    "name": "h1",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should nest correctly without h1 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h3",
      },
    ],
    "name": "h2",
  },
  Object {
    "links": Array [
      Object {
        "name": "another h3",
      },
    ],
    "name": "another h2",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should not nest two h2 1`] = `
Array [
  Object {
    "links": Array [
      Object {
        "name": "h2",
      },
      Object {
        "links": Array [
          Object {
            "name": "h3",
          },
        ],
        "name": "h2",
      },
    ],
    "name": "h1",
  },
]
`;

exports[`The NavLinkBuilder without a preceding collapsable header should not nest two h3 1`] = `
Array [
  Object {
    "name": "h1",
  },
  Object {
    "links": Array [
      Object {
        "name": "h2",
      },
      Object {
        "links": Array [
          Object {
            "name": "h3",
          },
          Object {
            "links": Array [
              Object {
                "name": "h4",
              },
            ],
            "name": "h3",
          },
        ],
        "name": "h2",
      },
    ],
    "name": "h1",
  },
]
`;
